--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,10 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.8.0"
+
+#   TODO: We use quite a lot of yapapi dependencies that are not implicitly imported,
+#         this should be fixed - but not now. First we must be sure what is the future of
+#         golem_api, yapapi and how they are related.
 yapapi = "^0.9.2"
 
 #   TODO: why isn't this auto-installed by mypy?
@@ -30,3 +34,7 @@ types-click = "^7.1.2"
 sphinx = { version = "^4.0.1", optional = true }
 sphinx-autodoc-typehints = { version = "^1.12.0", optional = true }
 sphinx-rtd-theme = { version = "^1.0.0", optional = true}
+
+# TODO: dev dependecies?
+pytest = "^7.1.3"
+pytest-asyncio = "^0.19"
