--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,3 +42,4 @@ sphinx-rtd-theme = { version = "^1.0.0", optional = true}
 # TODO: dev dependecies?
 pytest = "^7.1.3"
 pytest-asyncio = "^0.19"
+mypy = "^0.971"
