--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,3 +43,15 @@ sphinx-rtd-theme = { version = "^1.0.0", optional = true}
 pytest = "^7.1.3"
 pytest-asyncio = "^0.19"
 mypy = "^0.971"
+
+[tool.mypy]
+namespace_packages = true
+
+strict = true
+allow_any_generics = true
+implicit_reexport = true
+allow_untyped_calls = true
+
+#   TODO: this works well, but we get some TOML parsing error - ???
+[tool.mypy-test.*]
+allow_untyped_defs = true
