--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,15 +34,14 @@ click = "^7.1.2"
 types-prettytable = "^3.3.0"
 types-click = "^7.1.2"
 
-# Docs
-sphinx = { version = "^4.0.1", optional = true }
-sphinx-autodoc-typehints = { version = "^1.12.0", optional = true }
-sphinx-rtd-theme = { version = "^1.0.0", optional = true}
-
-# TODO: dev dependecies?
+[tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
 pytest-asyncio = "^0.19"
 mypy = "^0.971"
+
+sphinx = "^5.1.1"
+sphinx-autodoc-typehints = "^1.19.2"
+sphinx-rtd-theme = "^1.0.0"
 
 [tool.mypy]
 namespace_packages = true
@@ -51,7 +50,3 @@ strict = true
 allow_any_generics = true
 implicit_reexport = true
 allow_untyped_calls = true
-
-#   TODO: this works well, but we get some TOML parsing error - ???
-[tool.mypy-test.*]
-allow_untyped_defs = true
