--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,9 +3,9 @@ requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
-name = "golem-api"
+name = "golem-core"
 version = "0.0.1"
-description = "Python Golem (https://www.golem.network/) API"
+description = "Python Golem (https://www.golem.network/) Core API"
 authors = ["Jan Betley <jan.betley@golem.network>", "GolemFactory <contact@golem.network>"]
 license = "LGPL-3.0-or-later"
 classifiers = [
@@ -14,7 +14,7 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: System :: Distributed Computing"
 ]
-repository = "https://github.com/golemfactory/golem-api-python"
+repository = "https://github.com/golemfactory/golem-core-python"
 documentation = "NOPE"  # TODO - readthedocs is waiting for a public repo
 readme = "README.md"
 
@@ -23,7 +23,7 @@ python = "^3.8.0"
 
 #   TODO: We use quite a lot of yapapi dependencies that are not implicitly imported,
 #         this should be fixed - but not now. First we must be sure what is the future of
-#         golem_api, yapapi and how they are related.
+#         golem_core, yapapi and how they are related.
 yapapi = "^0.9.3"
 
 #   CLI
