--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,9 @@ click = "^8.1.3"
 #   TODO: why isn't this auto-installed by mypy?
 types-prettytable = "^3.4.1"
 
+#   NOTE: this is only required in yacat.py
+aiofiles = "^22.1.0"
+
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
 pytest-asyncio = "^0.19"
