--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ types-prettytable = "^3.4.1"
 
 #   NOTE: this is only required in yacat.py
 aiofiles = "^22.1.0"
+aiopg = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
