--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,9 @@ sphinx-rtd-theme = "^1.0.0"
 
 poethepoet = "^0.8.0"
 
+[tool.poetry.group.examples.dependencies]
+asciimatics = "^1.14.0"
+
 [tool.mypy]
 namespace_packages = true
 
