--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ python = "^3.8.0"
 #   TODO: We use quite a lot of yapapi dependencies that are not implicitly imported,
 #         this should be fixed - but not now. First we must be sure what is the future of
 #         golem_core, yapapi and how they are related.
-yapapi = "^0.9.3"
+yapapi = "^0.10.0"
 
 #   CLI
 prettytable = "^3.4.1"
@@ -51,7 +51,7 @@ implicit_reexport = true
 allow_untyped_calls = true
 
 [tool.poe.tasks]
-test = { cmd = "pytest", env = { YAGNA_SUBNET = "public" } }
+test = "pytest"
 typecheck = "mypy ."
 check = ["test", "typecheck"]
 
