--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,9 +51,12 @@ implicit_reexport = true
 allow_untyped_calls = true
 
 [tool.poe.tasks]
-test = { cmd = "pytest", env = { YAGNA_SUBNET = "public" } }
-typecheck = "mypy ."
-check = ["test", "typecheck"]
+checks = {sequence = ["checks_typing"], help = "Run all available code checks"}
+checks_typing = "mypy ."
+tests = {sequence = ["tests_unit", "tests_integration"], help = "Run all available tests"}
+tests_unit = {cmd = "pytest -sv tests/unit", env = { YAGNA_APPKEY = "test" }, help = "Run only unit tests"}
+# `tests_integration` require yagna requestor with `YAGNA_APPKEY` in environement
+tests_integration = {cmd = "pytest -sv tests/integration", env = { YAGNA_SUBNET = "public" }, help = "Run only integration tests"}
 
 sphinx = "sphinx-build docs/sphinx/ build -E"
 
