--- a/.github/workflows/tests-integration-nightly.yml
+++ b/.github/workflows/tests-integration-nightly.yml
@@ -11,12 +11,13 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Run tests action
+        id: tests
         uses: './.github/actions/integration-tests-goth'
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Send Discord notification on failure
         uses: Ilshidur/action-discord@0.3.2
-        if: ${{ failure() }} || ${{ cancelled() }}
+        if: steps.tests.outcome != 'success'  # continue-on-error doesn't work with `failure()` https://github.com/actions/toolkit/issues/1034
         env:
           BRANCH_NAME: main
           DISCORD_AVATAR: https://i.imgur.com/EOX16Mx.jpg
