--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,9 @@ sphinx-rtd-theme = "^1.0.0"
 
 poethepoet = "^0.8.0"
 
+[tool.poetry.group.dev.dependencies]
+pytest-mock = "^3.10.0"
+
 [tool.mypy]
 install_types = true
 non_interactive = true
