--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ click = "^8.1.3"
 
 #   TODO: why isn't this auto-installed by mypy?
 types-prettytable = "^3.4.1"
+ya-aioclient = "^0.6.4"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
