--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,8 @@ click = "^8.1.3"
 #   TODO: why isn't this auto-installed by mypy?
 types-prettytable = "^3.4.1"
 ya-aioclient = "^0.6.4"
+jsonrpc-base = "^1.0.3"
+srvresolver = "^0.3.5"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
