--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ types-prettytable = "^3.4.1"
 ya-aioclient = "^0.6.4"
 jsonrpc-base = "^1.0.3"
 srvresolver = "^0.3.5"
+semantic-version = "^2.8"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
