--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ ya-aioclient = "^0.6.4"
 jsonrpc-base = "^1.0.3"
 srvresolver = "^0.3.5"
 semantic-version = "^2.8"
+async-exit-stack = "1.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.1.3"
