--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ jsonrpc-base = "^1.0.3"
 srvresolver = "^0.3.5"
 semantic-version = "^2.8"
 async-exit-stack = "1.0.1"
+textx = "^3.1.1"
+setuptools = "*"  # textx external dependency
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7"
