--- a/.github/workflows/tests-integration-ci.yml
+++ b/.github/workflows/tests-integration-ci.yml
@@ -15,8 +15,16 @@ jobs:
     runs-on: [goth, ubuntu-22.04]
     steps:
       - uses: actions/checkout@v3
+      
       - name: Run tests action
         uses: './.github/actions/integration-tests-goth'
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  
+      - name: Upload test logs
+        uses: actions/upload-artifact@v2
+        if: always()
+        with:
+            name: goth-logs
+            path: /tmp/goth-tests
   
