--- a/.github/actions/integration-tests-goth/action.yml
+++ b/.github/actions/integration-tests-goth/action.yml
@@ -17,9 +17,7 @@ runs:
       with:
         python-version: ${{ inputs.PYTHON_VERSION }}
     - name: Install and configure Poetry
-      uses: snok/install-poetry@v1
-      with:
-        version: 1.4.1
+      run: python -m pip install -U pip setuptools poetry==1.3.2
 
     - name: Install dependencies
       shell: bash
