--- a/.github/actions/integration-tests-goth/action.yml
+++ b/.github/actions/integration-tests-goth/action.yml
@@ -17,6 +17,7 @@ runs:
       with:
         python-version: ${{ inputs.PYTHON_VERSION }}
     - name: Install and configure Poetry
+      shell: bash
       run: python -m pip install -U pip setuptools poetry==1.3.2
 
     - name: Install dependencies
