--- a/.github/workflows/tests-integration-nightly.yml
+++ b/.github/workflows/tests-integration-nightly.yml
@@ -7,7 +7,7 @@ on:
 jobs:
   tests-integration:
     name: Run checks
-    runs-on: [goth, ubuntu-22.04]
+    runs-on: goth2
     steps:
       - uses: actions/checkout@v3
       - name: Run tests action
