--- a/.github/actions/integration-tests-goth/action.yml
+++ b/.github/actions/integration-tests-goth/action.yml
@@ -18,7 +18,7 @@ runs:
         python-version: ${{ inputs.PYTHON_VERSION }}
     - name: Install and configure Poetry
       shell: bash
-      run: python -m pip install -U pip setuptools poetry==1.5.1
+      run: apt-get update && python -m pip install -U pip setuptools poetry==1.5.1
 
     - name: Install dependencies
       shell: bash
