--- a/.github/workflows/tests-integration-nightly.yml
+++ b/.github/workflows/tests-integration-nightly.yml
@@ -9,6 +9,8 @@ jobs:
     name: Run checks
     runs-on: goth2
     steps:
+      - run: rm -r /root/.cache/
+      - run: apt install -y python3.10-venv
       - uses: actions/checkout@v3
       - name: Run tests action
         id: tests
