--- a/.github/workflows/tests-integration-ci.yml
+++ b/.github/workflows/tests-integration-ci.yml
@@ -14,7 +14,8 @@ jobs:
     name: Run checks
     runs-on: goth2
     steps:
-      - run: rm -r /root/.cache/
+      - run: rm -rf /root/.cache/
+      - run: apt-get update
       - run: apt install -y python3.10-venv
       - uses: actions/checkout@v3
       - name: Run tests action
