--- a/.github/workflows/tests-integration-nightly.yml
+++ b/.github/workflows/tests-integration-nightly.yml
@@ -10,6 +10,7 @@ jobs:
     runs-on: goth2
     steps:
       - run: rm -rf /root/.cache/
+      - run: rm -rf /tmp/goth-tests/
       - run: apt-get update
       - run: apt install -y python3.10-venv
       - uses: actions/checkout@v3
@@ -31,3 +32,9 @@ jobs:
         with:
           # <@&717623005911580713> = @sdk-integrations
           args: "<@&717623005911580713> Goth nightly run failed for `{{ REPO_NAME }}` on branch `{{ BRANCH_NAME }}`! <{{ WORKFLOW_URL }}>"
+      - name: Upload test logs
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: goth-logs
+          path: /tmp/goth-tests
