--- a/pyproject.toml
+++ b/pyproject.toml
@@ -122,6 +122,7 @@ extend-ignore = [
     "D104", # No docs for public package
     "D107", # No docs for __init__
     "D202", # We prefer whitelines after docstrings
+    "W604", # Backticks complain on Python 3.12+
 ]
 
 [tool.mypy]
