--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.dependencies]
-python = "^3.8.0"
+python = "^3.8.1"
 
 # CLI
 prettytable = "^3.4.1"
@@ -45,7 +45,7 @@ isort = "^5"
 black = "^23"
 
 mypy = "^1"
-flake8 = "^5"
+flake8 = "^7"
 flake8-docstrings = "^1"
 Flake8-pyproject = "^1"
 
@@ -122,6 +122,7 @@ extend-ignore = [
     "D104", # No docs for public package
     "D107", # No docs for __init__
     "D202", # We prefer whitelines after docstrings
+    "W604", # Backticks complain on Python 3.12+
 ]
 
 [tool.mypy]
