--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ srvresolver = "^0.3.5"
 semantic-version = "^2.8"
 async-exit-stack = "1.0.1"
 textx = "^3.1.1"
+
 setuptools = "*"  # textx external dependency
 
 [tool.poetry.group.dev.dependencies]
@@ -72,7 +73,7 @@ _format_isort = "isort ."
 _format_black = "black ."
 
 tests = {sequence = ["tests_unit", "tests_integration"], help = "Run all available tests"}
-tests_unit = {cmd = "pytest --ignore tests/integration", env = { YAGNA_APPKEY = "test" }, help = "Run only unit tests"}
+tests_unit = {cmd = "pytest --ignore tests/integration --cov golem --cov-report html --cov-report term-missing --no-cov-on-fail -sv", env = { YAGNA_APPKEY = "test" }, help = "Run only unit tests"}
 # `tests_integration` require yagna requestor with `YAGNA_APPKEY` in environement
 tests_integration = {cmd = "pytest --ignore tests/unit", help = "Run only integration tests"}
 
@@ -151,8 +152,7 @@ target-version = ['py38']
 
 [tool.pytest.ini_options]
 asyncio_mode = "auto"
-addopts = "--cov golem --cov-report html --cov-report term-missing --no-cov-on-fail -sv"
-testspaths = [
+testpaths = [
     "tests",
 ]
 
