--- a/.github/workflows/tests-integration-nightly.yml
+++ b/.github/workflows/tests-integration-nightly.yml
@@ -1,8 +1,9 @@
 name: Integration tests nightly
-on:
-  schedule:
-    # run this workflow every day at 2:00 AM UTC
-    - cron: '0 2 * * *'
+on: {}
+# on:
+#   schedule:
+#     # run this workflow every day at 2:00 AM UTC
+#     - cron: '0 2 * * *'
 
 jobs:
   tests-integration:
